@@ -83,6 +83,68 @@ def tokens = [
         ADD_OPENS           : project.addOpens.join(' ')
 ]
 
+def defaultJreModules = [
+        'java.base',
+        'java.compiler',
+        'java.datatransfer',
+        'java.desktop',
+        'java.instrument',
+        'java.logging',
+        'java.management',
+        'java.management.rmi',
+        'java.naming',
+        'java.net.http',
+        'java.prefs',
+        'java.rmi',
+        'java.scripting',
+        'java.se',
+        'java.security.jgss',
+        'java.security.sasl',
+        'java.smartcardio',
+        'java.sql',
+        'java.sql.rowset',
+        'java.transaction.xa',
+        'java.xml',
+        'java.xml.crypto',
+        'jdk.accessibility',
+        'jdk.charsets',
+        'jdk.crypto.cryptoki',
+        'jdk.dynalink',
+        'jdk.graal.compiler',
+        'jdk.graal.compiler.management',
+        'jdk.httpserver',
+        'jdk.incubator.vector',
+        'jdk.internal.vm.ci',
+        'jdk.jdwp.agent',
+        'jdk.jfr',
+        'jdk.jsobject',
+        'jdk.localedata',
+        'jdk.management',
+        'jdk.management.agent',
+        'jdk.management.jfr',
+        'jdk.naming.dns',
+        'jdk.naming.rmi',
+        'jdk.net',
+        'jdk.nio.mapmode',
+        'jdk.sctp',
+        'jdk.security.auth',
+        'jdk.security.jgss',
+        'jdk.unsupported',
+        'jdk.xml.dom',
+        'jdk.zipfs'
+]
+
+def jreModules = new HashSet<>(defaultJreModules)
+project.addOpens.each { openArg ->
+    def normalized = openArg.replaceFirst(/^--add-opens=/, '')
+    def moduleName = normalized.split('/')[0]
+    if (moduleName) {
+        jreModules.add(moduleName)
+    }
+}
+
+ext.docker_jre_modules = jreModules.toList()
+
 def replaceVars = tasks.register('replaceVars', Copy) {
     from "$rootDir/packaging/common/linux/$tokens.SETUP_JAVA_FILE_NAME"
     from "$rootDir/packaging/docker/$tokens.BOOTSTRAP_FILE_NAME"
@@ -92,10 +154,74 @@ def replaceVars = tasks.register('replaceVars', Copy) {
 }
 
 ext.docker_image_name = "apacheignite/ignite:${project.projectVersion.toString()}"
+ext.docker_cli_image_name = "apacheignite/ignite-cli:${project.projectVersion.toString()}"
+
+// CLI-only Docker image tasks (defined before main docker block so they can be referenced)
+def dockerCliPrepare = tasks.register('dockerCliPrepare', Copy) {
+    dependsOn cliStartScript
+
+    into "$buildDir/docker-cli"
+
+    into('dist/cli') {
+        into('') {
+            from "$rootDir/LICENSE"
+            from "$rootDir/NOTICE"
+            from "$rootDir/assembly/README.md"
+        }
+        into('bin') {
+            fileMode 0755
+            from cliStartScript
+        }
+        into('lib') {
+            from configurations.cliArtifacts
+        }
+    }
+
+    into('') {
+        from 'docker/Dockerfile.cli'
+    }
+}
+
+def dockerCli = tasks.register('dockerCli', Exec) {
+    dependsOn dockerCliPrepare
+
+    workingDir "$buildDir/docker-cli"
+
+    def imageTag = project.docker_cli_image_name
+    def dockerArgs = ['docker', 'buildx', 'build', '-f', 'Dockerfile.cli', '-t', imageTag]
+
+    if (project.hasProperty('target_platform')) {
+        dockerArgs.addAll(['--platform', project.properties["target_platform"]])
+    }
+
+    dockerArgs.add('.')
+
+    commandLine dockerArgs
+
+    doFirst {
+        logger.lifecycle("Building CLI Docker image: ${imageTag}")
+    }
+}
+
+def dockerCliPush = tasks.register('dockerCliPush', Exec) {
+    dependsOn dockerCli
+
+    def imageTag = project.docker_cli_image_name
+    commandLine 'docker', 'push', imageTag
+
+    doFirst {
+        logger.lifecycle("Pushing CLI Docker image: ${imageTag}")
+    }
+}
 
 docker {
     name project.docker_image_name
     dockerfile file('docker/Dockerfile')
+    buildArgs(
+        [
+            JRE_MODULES: project.docker_jre_modules.join(',')
+        ]
+    )
 
     if (project.hasProperty('target_platform')) {
         platform project.properties["target_platform"]
@@ -157,6 +283,29 @@ docker {
 }
 
 dockerPrepare.dependsOn replaceVars
+
+// Make 'docker' task also build CLI image, and push it when docker_push is set
+tasks.named('docker') {
+    dependsOn dockerCli
+    if (project.hasProperty('docker_push')) {
+        finalizedBy dockerCliPush
+    }
+}
+
+// Task to update docker-compose.yml with current project version
+tasks.register('updateVersion') {
+    description = 'Updates docker-compose.yml with the current project version'
+    group = 'versioning'
+
+    doLast {
+        def composeFile = file('docker/docker-compose.yml')
+        def content = composeFile.text
+        def pattern = 'image: apacheignite/ignite:\\$\\{IGNITE3_VERSION:-[^}]+\\}'
+        def replacement = 'image: apacheignite/ignite:\\${IGNITE3_VERSION:-' + project.version + '}'
+        composeFile.text = content.replaceAll(pattern, replacement)
+        logger.lifecycle("Updated docker-compose.yml to version ${project.version}")
+    }
+}
 
 // create an uber zip with all distributions
 // This task cannot be converted to lazy configuration due to some weird incompatibility with distribution plugin
